# PolyDiM-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  all_includes.hpp  assembler_utilities.py  binding.pyi  bindings.cpp  bindings.pyi  export_vtk_utilities.py  generate.py  generate_bindings.py  istruzioni.txt  main.py  pypolydim.pyi  pyproject.toml  requirements.txt  test.py  test_header.hpp  vtk_utilities.py
.github/workflows/: build_wheels.yml  build_wheels.yml.bak  deploy.yml
GeDiM_additional_include/: Gedim_Macro.hpp  Polydim_Macro.hpp
