[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11",
    "setuptools>=42",
    "wheel",
   # "cmake",
    "litgen"
]
build-backend = "scikit_build_core.build"

[project]
name = "pypolydim"
version = "0.0.3"
description = "Bindings Python for PolyDiM&GeDiM based on pybind11"
authors = [
    { name = "Gioana Teora", email = "gioana.teora@polito.it" }
]
requires-python = ">=3.12"
license = { text = "GPL" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake]
args = [
    "-DCMAKE_BUILD_TYPE=Release",
    "-DENABLE_TRIANGLE=ON",
    "-DENABLE_TETGEN=ON",
    "-DENABLE_VORO=ON",
    "-DCMAKE_PREFIX_PATH=./.venv/share/cmake/pybind11;./external/Main_Install/triangle;./external/Main_Install/tetgen;./external/Main_Install/voro"
]

[tool.scikit-build.build]
tool-args = ["-j", "6"]

# Install system library
[tool.cibuildwheel]
build = "cp312-*"
skip = [
    "*musllinux*"
]
before-build = ["yum install -y blas-devel lapack-devel eigen3-devel",
    "cmake -S PolyDiM/gedim/3rd_party_libraries -B external -DCMAKE_BUILD_TYPE=Release -DINSTALL_LAPACK=OFF -DINSTALL_EIGEN3=OFF",
    "(cd external && make -j 6)"]

